--- a/TrafficInspection/src/main/resources/templates/landing.html
+++ b/TrafficInspection/src/main/resources/templates/landing.html
@@ -1,4 +1,4 @@
-<html lang="ru" >
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,6 +10,8 @@
     <h1>Landing</h1>
     <p><a th:href="@{/driver}">Водители</a></p>
     <p><a th:href="@{/department}">Подразделения</a></p>
-    <p><a th:href="@{/categories}">Все категории</a></p>
+    <p><a th:href="@{/categories}">Категории</a></p>
+    <p><a th:href="@{/fines}">Штрафы</a></p>
+    <p><a th:href="@{/employees}">Сотрудники</a></p>
 </body>
 </html>
