--- a/TrafficInspection/src/main/resources/templates/fines.html
+++ b/TrafficInspection/src/main/resources/templates/fines.html
@@ -19,7 +19,7 @@
   <th:block th:each="fine: ${fines}">
     <tr>
       <td th:text="${fine.description}"></td>
-      <td th:text="${fine.fineAmount} рублей"></td>
+      <td th:text="${fine.fineAmount}"></td>
     </tr>
   </th:block>
   </tbody>
