Внедрение нового контроллера подразделений

--- a/TrafficInspection/src/main/resources/templates/landing.html
+++ b/TrafficInspection/src/main/resources/templates/landing.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Landing</h1>
-    <p><a th:href="@{/driver}">Водители</a></p>
-    <p><a th:href="@{/department}">Подразделения</a></p>
+    <p><a th:href="@{/departments}">Подразделения</a></p>
     <p><a th:href="@{/categories}">Категории</a></p>
     <p><a th:href="@{/fines}">Штрафы</a></p>
     <p><a th:href="@{/employees}">Сотрудники</a></p>
+    <b><a th:href="@{/me}">Войти в аккаунт</a></b>
 </body>
 </html>
