Контроллер профиля пользователя

--- a/TrafficInspection/src/main/resources/templates/profile.html
+++ b/TrafficInspection/src/main/resources/templates/profile.html
@@ -6,7 +6,6 @@
 </head>
 <body>
   <h2>User profile</h2>
-  <p>Name: <span th:text="${driver.fullName}"></span></p>
-  <p>Email: <span th:text="${driver.registrationAddress}"></span></p>
+  <p>Username from Security Context: <span th:text="${username}"></span></p>
 </body>
 </html>
