--- a/TrafficInspection/src/main/resources/templates/landing.html
+++ b/TrafficInspection/src/main/resources/templates/landing.html
@@ -1,22 +1,52 @@
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inspection_Landing</title>
+    <title>TrafficApp</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;
+    1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
-    <h1>Landing</h1>
-    <p><a th:href="@{/departments}">Подразделения</a></p>
-    <p><a th:href="@{/categories}">Категории</a></p>
-    <p><a th:href="@{/fines}">Штрафы</a></p>
-    <p><a th:href="@{/employees}">Сотрудники</a></p>
-    <b><a th:href="@{/me}">Войти в аккаунт</a></b>
-    <p>Узнать о своих штрафах</p>
-    <form action="/getFines" method="get">
-        <input type="text" name="code" placeholder="А000ААRUS061">
-        <input type="submit" value="Узнать">
-    </form>
+<header class='header'>
+    <div class='nav_container'>
+        <div class='nav_block'>
+            <a th:href="@{/employees}"><span>Сотрудники ГИБДД</span></a>
+        </div>
+        <div class='nav_block'>
+            <a th:href="@{/categories}"><span>Категории ТС</span></a>
+        </div>
+        <div class='nav_block'>
+            <a th:href="@{/fines}"><span>Штрафы</span></a>
+        </div>
+        <div class='nav_block'>
+            <a th:href="@{/departments}"><span>Подразделения</span></a>
+        </div>
+        <a th:href="@{/login}">
+            <button type="button" class="default_button">Войти</button>
+        </a>
+    </div>
+</header>
+<main class="main">
+    <div class='content'>
+        <div id='label' class='label'>
+            <div id='welcome-text' class='welcome-text'>
+                <h1>Проверьте свои штрафы по регистрационному номеру</h1>
+            </div>
+        </div>
+        <form class="input_form" action="/getFines" method="get">
+            <input type="text" name="code" id="code" placeholder="A 000 AA RUS 061">
+            <button type="submit" class="default_button">Узнать</button>
+        </form>
+    </div>
+</main>
+<footer class="footer">
+
+</footer>
+<!--    <div id='main_car_image' class='main_car_image'>-->
+<!--        <img th:src='@{/img/landing_car.png}' id='img' class='img'/>-->
+<!--    </div>-->
 </body>
 </html>
