--- a/TrafficInspection/src/main/resources/templates/departments.html
+++ b/TrafficInspection/src/main/resources/templates/departments.html
@@ -1,29 +1,53 @@
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Department</title>
+    <title>TrafficApp</title>
+    <link href="../static/css/header.css" th:href="@{/css/header.css}" rel="stylesheet">
+    <link href="../static/css/components.css" th:href="@{/css/components.css}" rel="stylesheet">
 </head>
 <body>
-  <table>
-    <caption><h2>Подразделения ГИБДД Ростовской области</h2></caption>
-    <thead>
-    <tr>
-      <th>Адрес подразделения</th>
-      <th>Тип подразделения</th>
-    </tr>
-    </thead>
-    <tbody>
-    <th:block th:each="department: ${departments}">
-      <tr>
-        <td th:text="${department.departmentLocation}"></td>
-        <td th:text="${department.departmentType}"></td>
-      </tr>
-    </th:block>
-    </tbody>
-  </table>
-  <a th:href="@{/}">Главная</a>
+<header class='header'>
+    <div class='nav_container'>
+        <div class='nav_block'>
+            <a class="img_container" th:href="@{/}">
+                <img src="/static/img/home_page_icon.png" th:src='@{/img/home_page_icon.png}' alt="Home"/>
+            </a>
+        </div>
+        <div class='nav_block'>
+            <a th:href="@{/employees}"><span>Сотрудники ГИБДД</span></a>
+        </div>
+        <div class='nav_block'>
+            <a th:href="@{/categories}"><span>Категории ТС</span></a>
+        </div>
+        <div class='nav_block'>
+            <a th:href="@{/fines}"><span>Штрафы</span></a>
+        </div>
+        <div class='nav_block'>
+            <a th:href="@{/departments}"><span>Подразделения</span></a>
+        </div>
+        <a th:href="@{/login}">
+            <button type="button" class="default_button">Войти</button>
+        </a>
+    </div>
+</header>
+<main class="main">
+    <div class='container content'>
+        <div class='label_container'>
+            <span class="h1">Подразделения ГИБДД</span>
+            <span class="h2">Ростовская Область</span>
+        </div>
+        <div class="container list">
+            <th:block th:each="department: ${departments}">
+                <div class="container item">
+                    <p class="item_title" th:text="${department.departmentType}">Заголовок</p>
+                    <p class="item_description" th:text="${department.departmentLocation}">Текст</p>
+                </div>
+            </th:block>
+        </div>
+    </div>
+</main>
+<footer class="footer">
+</footer>
 </body>
 </html>
