--- a/TrafficInspection/src/main/resources/templates/landing.html
+++ b/TrafficInspection/src/main/resources/templates/landing.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>TrafficApp</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;
-    1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
+    <link href="../static/css/header.css" th:href="@{/css/header.css}" rel="stylesheet">
+    <link href="../static/css/components.css" th:href="@{/css/components.css}" rel="stylesheet">
+    <link href="../static/css/landing.css" th:href="@{/css/landing.css}" rel="stylesheet">
 </head>
 <body>
 <header class='header'>
     <div class='nav_container'>
+        <div class='nav_block'>
+            <a class="img_container" th:href="@{/}">
+                <img src="/static/img/home_page_icon.png" th:src='@{/img/home_page_icon.png}' alt="Home"/>
+            </a>
+        </div>
         <div class='nav_block'>
             <a th:href="@{/employees}"><span>Сотрудники ГИБДД</span></a>
         </div>
@@ -30,11 +33,9 @@
     </div>
 </header>
 <main class="main">
-    <div class='content'>
-        <div id='label' class='label'>
-            <div id='welcome-text' class='welcome-text'>
-                <h1>Проверьте свои штрафы по регистрационному номеру</h1>
-            </div>
+    <div class='container content'>
+        <div class='label_container'>
+            <span class="h1">Проверьте свои штрафы по регистрационному номеру</span>
         </div>
         <form class="input_form" action="/getFines" method="get">
             <input type="text" name="code" id="code" placeholder="A 000 AA RUS 061">
