--- a/TrafficInspection/src/main/resources/templates/pages/license.html
+++ b/TrafficInspection/src/main/resources/templates/pages/license.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header th:replace="~{components/header :: header}"></header>
-<main class="container main" style="position: relative">
+<main class="container main" style="position: relative" th:with="license=${session.license}">
     <div class="container nav_panel" th:replace="~{components/nav_panel :: nav_panel}"></div>
     <div th:if="${license != null}" class="container nav_content">
         <div class='label_container'>
