--- a/TrafficInspection/src/main/resources/templates/pages/violations.html
+++ b/TrafficInspection/src/main/resources/templates/pages/violations.html
@@ -8,28 +8,20 @@
 </head>
 <body>
 <header th:replace="~{components/header :: header}"></header>
-<main class="container main">
-  <div class='container content'>
+<main class="container main" style="position: relative" th:with="license=${session.license}">
+  <div class="container nav_panel" th:replace="~{components/nav_panel :: nav_panel}"></div>
+  <div th:if="${license != null}" class="container nav_content">
     <div class='label_container'>
-      <span class="h1" th:text="'Нарушения по номеру ' + ${registrationCode}">Нарушения</span>
+      <span class="h1">Мои нарушения</span>
     </div>
-    <div class="container list">
-      <div th:if="${violations.isEmpty()}" style="display: flex; justify-content: center">
-        <p class="h1" style="color: gray">Нарушений нет</p>
-      </div>
-      <div th:unless="${violations.isEmpty()}">
-        <th:block th:each="violation: ${violations}">
-          <div class="container item">
-            <p class="item_title" th:text="${violation.description}">Заголовок</p>
-            <p class="wrapper item_description"
-               style="background-color: #01002e; color: white; font-weight: 600"
-               th:text="${violation.fineAmount} + ' ₽'">
-            </p>
-            <p class="item_description" th:text="'Нарушение: ' + ${violation.dateOfViolation}">Текст</p>
-            <p class="item_description" th:text="'Погашение: ' + ${violation.dateOfPayment} ?: '-'">Текст</p>
-          </div>
-        </th:block>
-      </div>
+    <div class="container list" th:replace="~{components/violations :: violations}"></div>
+  </div>
+  <div th:if="${license == null}" class="container blocked">
+    <div class="container banner_info">
+      <p>Добавьте водительское удостоверение</p>
+      <a th:href="@{/me/license/new}">
+        <button class="default_button">Добавить</button>
+      </a>
     </div>
   </div>
 </main>
