--- a/TrafficInspection/src/main/resources/templates/pages/vehicles.html
+++ b/TrafficInspection/src/main/resources/templates/pages/vehicles.html
@@ -14,21 +14,7 @@
         <div class='label_container'>
             <span class="h1">Мой транспорт</span>
         </div>
-        <div class="container list">
-            <th:block th:each="vehicle: ${vehicles}">
-                <div class="container item">
-                    <p class="item_title" th:text="${vehicle.registrationCode}">Заголовок</p>
-                    <p class="item_description" th:text="${vehicle.vin}">Текст</p>
-                    <p class="item_description" th:text="${vehicle.modelName}">Текст</p>
-                    <p class="item_description" th:text="${vehicle.brandName}">Текст</p>
-                    <p class="item_description" th:text="${vehicle.manufactureYear}">Текст</p>
-                    <p class="item_description" th:text="${vehicle.bodyColor}">Текст</p>
-                    <p class="item_description" th:text="${vehicle.categoryCode}">Текст</p>
-                    <p class="item_description" th:text="${vehicle.fullName}">Текст</p>
-                    <p class="item_description" th:text="${vehicle.dateOfRegistration}">Текст</p>
-                </div>
-            </th:block>
-        </div>
+        <div class="container list" th:replace="~{components/vehicles :: vehicles}"></div>
     </div>
     <div th:if="${license == null}" class="container blocked">
         <div class="container banner_info">
