--- a/TrafficInspection/src/main/resources/static/css/components.css
+++ b/TrafficInspection/src/main/resources/static/css/components.css
@@ -50,6 +50,7 @@ input {
     padding: 0.2em;
 }
 .default_button {
+    font-size: 0.8em;
     background-color: #1C1962;
     padding: 0.2em 1em;
     color: white;
@@ -98,7 +99,7 @@ input {
     width: 100%;
     height: fit-content;
     max-height: 50vh;
-    padding: 2em 0.5em;
+    padding: 1em 0.5em;
     border-radius: 0.4em;
     overflow-y: scroll;
     overflow-x: hidden;
