--- a/TrafficInspection/src/main/resources/static/css/layout.css
+++ b/TrafficInspection/src/main/resources/static/css/layout.css
@@ -8,7 +8,7 @@
     border-radius: 0 0 0.3em 0.3em;
 }
 .header span {
-    font-size: 0.9em;
+    font-size: 0.7em;
     font-weight: 500;
     color: white;
 }
@@ -26,6 +26,42 @@
     max-width: 30%;
     width: fit-content;
     height: 100%;
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    height: 100%;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    max-width: 7em;
+    border-radius: 0.3em;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    font-size: 0.6em;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
 .footer {
     background-color: #232323;
