--- a/TrafficInspection/src/main/resources/templates/pages/registration.html
+++ b/TrafficInspection/src/main/resources/templates/pages/registration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <title>TrafficApp_Register</title>
   <link href="../../static/css/components.css" th:href="@{/css/components.css}" rel="stylesheet">
   <link href="../../static/css/login.css" th:href="@{/css/login.css}" rel="stylesheet">
