--- a/TrafficInspection/src/main/resources/templates/components/vehicles.html
+++ b/TrafficInspection/src/main/resources/templates/components/vehicles.html
@@ -10,15 +10,20 @@
 <div class="container list" th:fragment="vehicles">
     <th:block th:each="vehicle: ${vehicles}">
         <div class="container item">
-            <p class="item_title" th:text="${vehicle.registrationCode}">Заголовок</p>
-            <p class="item_description" th:text="${vehicle.vin}">Текст</p>
-            <p class="item_description" th:text="${vehicle.modelName}">Текст</p>
-            <p class="item_description" th:text="${vehicle.brandName}">Текст</p>
-            <p class="item_description" th:text="${vehicle.manufactureYear}">Текст</p>
-            <p class="item_description" th:text="${vehicle.bodyColor}">Текст</p>
-            <p class="item_description" th:text="${vehicle.categoryCode}">Текст</p>
-            <p class="item_description" th:text="${vehicle.fullName}">Текст</p>
-            <p class="item_description" th:text="${vehicle.dateOfRegistration}">Текст</p>
+            <div class="container" style="flex-direction: row; gap: 0.5em">
+                <p class="wrapper item_title reg_code" th:text="${vehicle.registrationCode}">REGISTRATION_CODE</p>
+
+                <p class="wrapper item_title category_code" th:text="${vehicle.categoryCode}">CATEGORY_CODE</p>
+            </div>
+            <p class="item_title" th:text="${vehicle.brandName}+' '
+                                                +${vehicle.modelName}+' '
+                                                +${vehicle.manufactureYear}">CAR_NAME</p>
+            <p class="item_description vin" th:text="'ВИН-номер: '+${vehicle.vin}">VIN</p>
+            <p class="item_description" th:text="'Цвет: '+${vehicle.bodyColor}">BODY_COLOR</p>
+<!--            <p class="item_description" th:text="${vehicle.fullName}">FULL_NAME</p>-->
+            <p class="item_description date" th:text="'Дата регистрации: '+${vehicle.dateOfRegistration}">
+                DATE_OF_REGISTRATION
+            </p>
         </div>
     </th:block>
 </div>
