--- a/TrafficInspection/src/main/resources/templates/components/violations.html
+++ b/TrafficInspection/src/main/resources/templates/components/violations.html
@@ -12,16 +12,25 @@
         <p class="h1" style="color: gray">Нарушений нет</p>
     </div>
     <div th:unless="${violations.isEmpty()}">
-        <th:block th:each="violation: ${violations}">
+        <th:block th:each="violation, iter: ${violations}">
             <div class="container item">
+                <p class="wrapper item_title reg_code" th:text="${violation.registrationCode}">REGISTRATION_CODE</p>
                 <p class="item_title" th:text="${violation.description}">Заголовок</p>
                 <p class="wrapper item_description"
                    style="background-color: #01002e; color: white; font-weight: 600"
                    th:text="${violation.fineAmount} + ' ₽'">
                 </p>
-                <p class="item_description" style="font-weight: 600" th:text="${violation.registrationCode}">Текст</p>
                 <p class="item_description" th:text="'Нарушение: ' + ${violation.dateOfViolation}">Текст</p>
-                <p class="item_description" th:text="'Погашение: ' + ${violation.dateOfPayment} ?: '-'">Текст</p>
+                <p th:if="${violation.dateOfPayment != null}" class="item_description"
+                   style="font-weight: 600; color: #3e8e41"
+                   th:text="'Погашение: ' + ${violation.dateOfPayment}">Текст</p>
+                <div th:if="${violation.dateOfPayment == null}">
+                    <p class="item_description"
+                       style="font-weight: 600; color: maroon">Не погашено</p>
+                    <form th:action="@{|/me/violations/${violation.violationId}|}" method="post">
+                        <button type="submit" class="default_button">Погасить штраф</button>
+                    </form>
+                </div>
             </div>
         </th:block>
     </div>
