--- a/TrafficInspection/src/main/resources/templates/pages/landing.html
+++ b/TrafficInspection/src/main/resources/templates/pages/landing.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>TrafficApp</title>
     <link href="../../static/css/components.css" th:href="@{/css/components.css}" rel="stylesheet">
-    <link href="../../static/css/landing.css" th:href="@{/css/landing.css}" rel="stylesheet">
     <link href="../../static/css/layout.css" th:href="@{/css/layout.css}" rel="stylesheet">
+    <link href="../../static/css/landing.css" th:href="@{/css/landing.css}" rel="stylesheet">
 </head>
 <body>
 <header th:replace="~{components/header :: header}"></header>
@@ -14,7 +14,7 @@
         <div class='label_container'>
             <span class="h1">Проверьте свои штрафы по регистрационному номеру</span>
         </div>
-        <form class="input_form" action="/getFines" method="get">
+        <form class="input_form" id="landing_input" action="/getFines" method="get">
             <input type="text" name="code" id="code" placeholder="A 000 AA RUS 061">
             <button type="submit" class="default_button">Узнать</button>
         </form>
