--- a/TrafficInspection/src/main/resources/templates/pages/guest/fines.html
+++ b/TrafficInspection/src/main/resources/templates/pages/guest/fines.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>TrafficApp</title>
-    <link href="../../static/css/components.css" th:href="@{/css/components.css}" rel="stylesheet">
-    <link href="../../static/css/layout.css" th:href="@{/css/layout.css}" rel="stylesheet">
+    <link href="../../../static/css/components.css" th:href="@{/css/components.css}" rel="stylesheet">
+    <link href="../../../static/css/layout.css" th:href="@{/css/layout.css}" rel="stylesheet">
 </head>
 <body>
 <header th:replace="~{components/header :: header}"></header>
