--- a/TrafficInspection/src/main/resources/static/css/layout.css
+++ b/TrafficInspection/src/main/resources/static/css/layout.css
@@ -8,9 +8,15 @@
     border-radius: 0 0 0.3em 0.3em;
 }
 .header span {
-    font-size: 0.7em;
+    font-size: 0.8em;
     font-weight: 500;
     color: white;
+}
+.landing_container {
+    position: absolute;
+    z-index: -1;
+    right: -8em;
+    top: 8em;
 }
 .nav_container {
     width: 100%;
@@ -94,7 +100,7 @@
 }
 .nav_content {
     gap: 1em;
-    width: 80%;
+    width: 100%;
     height: 100%;
     padding: 2em;
 }
