--- a/TrafficInspection/src/main/resources/static/css/components.css
+++ b/TrafficInspection/src/main/resources/static/css/components.css
@@ -15,6 +15,7 @@ a, u {
 }
 
 .h1 {
+    width: 100%;
     font-weight: 600;
     font-size: 2rem;
 }
@@ -91,8 +92,9 @@ input {
     top: 10%;
 }
 .label_container {
+    height: 2em;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 .list {
     background-color: #e5e5e5;
