--- a/TrafficInspection/src/main/resources/templates/pages/guest/fines.html
+++ b/TrafficInspection/src/main/resources/templates/pages/guest/fines.html
@@ -12,6 +12,9 @@
     <div class='container content'>
         <div class='label_container'>
             <span class="h1">Штрафы из базы ГИБДД</span>
+            <a class="img_container" th:href="@{/fines/pdf}">
+                <img src="/static/img/save-90.png" th:src='@{/img/save-90.png}' alt="Save"/>
+            </a>
         </div>
         <div class="container list">
             <th:block th:each="fine: ${fines}">
