--- a/TrafficInspection/src/main/resources/static/css/components.css
+++ b/TrafficInspection/src/main/resources/static/css/components.css
@@ -74,7 +74,10 @@ input {
     border-radius: 0.3em;
 }
 .main {
-    height: 85vh;
+    align-items: center;
+    min-height: 90vh;
+    height: fit-content;
+    padding: 2em;
     overflow: hidden;
 }
 .wrapper {
@@ -88,8 +91,6 @@ input {
     gap: 0.8em;
     position: relative;
     width: 70%;
-    left: 12%;
-    top: 10%;
 }
 .label_container {
     height: 2em;
@@ -194,4 +195,40 @@ input {
     font-weight: 600;
     font-size: 0.6em;
 }
+.main_outer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+.main_inner {
+    display: flex;
+    gap: 0.5em;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.1em 1.4em;
+    background-color: #e5e5e5;
+    width: 27%;
+    border-radius: 0.7em;
+}
 
+.info_container {
+    gap: 0.2em;
+}
+.message_container {
+    justify-content: center;
+    padding: 0.8em 0.7em;
+    height: 1.2em;
+}
+.message_container span {
+    align-items: center;
+    font-size: 0.6em;
+    font-weight: 600;
+    color: white;
+}
+.error_message {
+    background-color: darkred;
+}
+.logout_message {
+    background-color: black;
+}
