--- a/TrafficInspection/src/main/resources/static/css/layout.css
+++ b/TrafficInspection/src/main/resources/static/css/layout.css
@@ -5,7 +5,6 @@
     height: 13vh;
     background-color: #000830;
     align-items: center;
-    border-radius: 0 0 0.3em 0.3em;
 }
 .header span {
     font-size: 0.8em;
@@ -70,9 +69,20 @@
     background-color: #3e8e41;
 }
 .footer {
-    background-color: #232323;
-    height: 30vh;
-    border-radius: 0.3em 0.3em 0 0;
+    gap: 0.8em;
+    display: flex;
+    padding: 0.9em;
+    flex-direction: row;
+    background-color: black;
+    height: 15vh;
+    border-radius: 0;
+    align-items: center;
+}
+.footer p {
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 0;
 }
 .nav_panel {
     justify-content: center;
@@ -102,13 +112,10 @@
     gap: 1em;
     width: 100%;
     height: 100%;
-    padding: 2em;
 }
 .blocked {
     justify-content: center;
     align-items: center;
-    background-color: black;
-    opacity: 0.5;
     height: 100%;
 }
 .banner_info {
@@ -118,8 +125,8 @@
 .banner_info p {
     font-size: 1.5em;
     font-weight: 600;
-    color: white;
 }
 .banner_info button {
-    width: 12em;
+    width: 100%;
 }
+
