--- a/TrafficInspection/src/main/resources/templates/pages/guest/landing.html
+++ b/TrafficInspection/src/main/resources/templates/pages/guest/landing.html
@@ -12,7 +12,7 @@
 <main class="container main" style="position: relative">
     <div class='container content'>
         <div class='label_container'>
-            <span class="h1">Проверьте свои штрафы по регистрационному номеру</span>
+            <span class="h1">Проверьте свои штрафы.</span>
         </div>
         <form class="input_form" id="landing_input" action="/getFines" method="get">
             <input type="text" name="code" id="code" placeholder="A 000 AA RUS 061">
@@ -24,8 +24,5 @@
     </div>
 </main>
 <footer class="container footer" th:replace="~{components/footer :: footer}"></footer>
-<!--    <div id='main_car_image' class='main_car_image'>-->
-<!--        <img th:src='@{/img/landing_car.png}' id='img' class='img'/>-->
-<!--    </div>-->
 </body>
 </html>
