--- a/TrafficInspection/src/main/resources/templates/pages/registration.html
+++ b/TrafficInspection/src/main/resources/templates/pages/registration.html
@@ -2,9 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>TrafficApp_Register</title>
+  <title>Register</title>
   <link href="../../static/css/components.css" th:href="@{/css/components.css}" rel="stylesheet">
-  <link href="../../static/css/login.css" th:href="@{/css/login.css}" rel="stylesheet">
 </head>
 <body>
 <div class="container main_outer">
